# tagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  tagent.conf  translator.conf
.debug/: test_version.rs
src/: cli.rs  clipboard.rs  config.rs  interactive.rs  keyboard.rs  main.rs  speech.rs  translator.rs  window.rs
src/providers/: google.rs  mod.rs
