[package]
name = "tagent"
version = "0.8.0+032"
edition = "2021"
description = "Text translator with unified GUI/Interactive interface and CLI mode"
authors = ["Holgert K"]
license = "MIT"
repository = "https://github.com/holgertkey/tagent-win"
readme = "README.md"
keywords = ["translation", "windows", "gui", "cli", "dictionary"]
categories = ["command-line-utilities", "internationalization"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard-win = "5.0"
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Console"
] }
url = "2.4"
dirs = "5.0"
colored = "2.1"
rodio = { version = "0.21", features = ["symphonia-mp3"] }
urlencoding = "2.1"

[build-dependencies]
winres = "0.1"

# Debug and test binaries
[[bin]]
name = "test_mouse_focus"
path = ".debug/test_mouse_focus.rs"